--- a/OMSUI/Views/MainWindow.xaml
+++ b/OMSUI/Views/MainWindow.xaml
@@ -12,10 +12,10 @@
         AllowsTransparency="True" 
         Height="780" Width="1280">
 
-    <Border CornerRadius="25" Padding="20" Background="#F7F6F4">
+    <Border CornerRadius="25" Padding="20 5 20 20" Background="#F7F6F4">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="40" />
+                <RowDefinition Height="30" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -39,7 +39,7 @@
             </StackPanel>
 
             <!--Menu-->
-            <Border Style="{StaticResource menuBorder}" Grid.RowSpan="2">
+            <Border Style="{StaticResource menuBorder}" Grid.Row="1">
                 <StackPanel >
                     <!--Logo-->
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 30 0 40">
@@ -129,7 +129,7 @@
                 </StackPanel>
             </Border>
 
-            <ContentControl Grid.Column="1" Grid.RowSpan="2"
+            <ContentControl Grid.Column="1" Grid.Row="1"
                             Content="{Binding Navigation.CurrentView}"/>
         </Grid>
     </Border>
