--- a/OMSUI/Views/ProductsView.xaml
+++ b/OMSUI/Views/ProductsView.xaml
@@ -8,38 +8,39 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="70*"/>
-            <ColumnDefinition Width="30*"/>
-        </Grid.ColumnDefinitions>       
+        <Grid.RowDefinitions>
+            <RowDefinition Height="65*"/>
+            <RowDefinition Height="35*"/>
+        </Grid.RowDefinitions>
 
-        <Border Grid.Column="0"
-                Style="{StaticResource whiteBorder}" 
-                Margin="15 0 7 0">
+        <Border Style="{StaticResource whiteBorder}" 
+                Margin="15 0 7 7">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="10*" />
-                    <RowDefinition Height="10*" />
-                    <RowDefinition Height="80*" />
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="10*"/>
+                    <RowDefinition Height="80*"/>
                 </Grid.RowDefinitions>
 
-                <!-- Search field that filters product list -->
-                <Grid Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  >
-                    <!-- overlay with hint text -->
-                    <TextBlock Margin="5,2" FontSize="14" Text="Search product" 
-                       Visibility="{Binding ElementName=txtSearchProducts, Path=Text.IsEmpty, Converter={StaticResource MyBoolToVisibilityConverter}}" 
-                       IsHitTestVisible="False" />
-                    <!-- enter term here -->
-                    <TextBox Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}" FontSize="14"
-                     TextWrapping="Wrap" AcceptsReturn="True" Name="txtSearchProducts" Background="Transparent" />
-                </Grid>
-
-                <TextBlock Grid.Row="1" 
-                           Text="Products"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Center"
-                           FontSize="20"
-                           Margin="10 0 0 20"/>
+                <TextBlock Grid.Row="0"
+                           Margin="20 10 0 0"
+                           Text="Products" 
+                           FontSize="23"
+                           HorizontalAlignment="Left" 
+                           VerticalAlignment="Center"/>
+                <StackPanel Grid.Row="1" 
+                            Orientation="Horizontal" 
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                            Margin="0 0 15 0">
+                    <TextBlock Text="Search product (name, description)" 
+                               FontSize="11"
+                               Margin="10"/>
+                    <TextBox Text="{Binding SearchTerm, UpdateSourceTrigger=PropertyChanged}"
+                             VerticalContentAlignment="Center"
+                             Width="200"
+                             Height="30"/>
+                </StackPanel>
 
                 <!-- List of products -->
                 <ScrollViewer VerticalScrollBarVisibility="auto"
@@ -58,9 +59,9 @@
                                 Binding="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
                             <DataGridTextColumn Header="Description" IsReadOnly="True" Width="*"
                                 Binding="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
-                            <DataGridTextColumn Header="Price" IsReadOnly="True" Width="*"
+                            <DataGridTextColumn Header="Price" IsReadOnly="True" Width="auto"
                                 Binding="{Binding Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"/>
-                            <DataGridTemplateColumn Header="Size Options" Width="auto">
+                            <DataGridTemplateColumn Header="Size Options" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <ComboBox ItemsSource="{Binding SizeOptions}"
@@ -75,7 +76,7 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn Header="Taste Options" Width="auto">
+                            <DataGridTemplateColumn Header="Taste Options" Width="*">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <ComboBox ItemsSource="{Binding TasteOptions}"
@@ -108,13 +109,219 @@
             </Grid>
         </Border>
 
-        <Border Grid.Column="1" Style="{StaticResource whiteBorder}" Margin="7 0 0 0">
-            <Grid>
-                <ContentControl Grid.Row="1" 
-                                Content="{Binding Navigation.CurrentNestedView}"
-                                Margin="15"/>
-            </Grid>
-        </Border>
+        <Border Grid.Row="1" Style="{StaticResource whiteBorder}"                
+                Margin="15 7 7 0">
 
+            <TabControl Grid.Row="1" 
+                        TabStripPlacement="Top"
+                        BorderThickness="0"
+                        Margin="10">
+
+                <TabItem Header="Add Product">
+                        <TabItem.Content>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <StackPanel Margin="10" VerticalAlignment="Center">
+                                <TextBlock Text="" FontSize="14" Margin="0 0 0 10"/>
+
+                                <TextBlock Text="Name" FontSize="13"/>
+                                <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
+                                         Margin="0 0 0 5"
+                                         FontSize="13"/>
+
+                                <TextBlock Text="Description" FontSize="13"/>
+                                <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"
+                                         Margin="0 0 0 5"
+                                         FontSize="13"/>
+
+                                <TextBlock Text="Price" FontSize="13"/>
+                                <TextBox Text="{Binding Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
+                                         Margin="0 0 0 10"
+                                         FontSize="13"/>
+                                
+                                <Button Content="Add"
+                                        Style="{StaticResource addButton}"
+                                        Command="{Binding CreateProductCommand}"
+                                        HorizontalAlignment="Center"
+                                        Padding="10 0 10 0"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="Size options" FontSize="13"/>
+                                <StackPanel Orientation="Horizontal" Height="150">
+                                    <ListBox ItemsSource="{Binding AvailableSizes, UpdateSourceTrigger=PropertyChanged}"
+                                             SelectedItem="{Binding SelectedSize, UpdateSourceTrigger=PropertyChanged}"
+                                             DisplayMemberPath="Name"
+                                             FontSize="13"
+                                             MinWidth="80">
+                                    </ListBox>
+                                    <StackPanel VerticalAlignment="Center">
+                                        <Button Content=">>"
+                                                Style="{StaticResource addButton}"
+                                                Command="{Binding AddSizeToProductCommand}"
+                                                Margin="10 0 10 10"
+                                                HorizontalAlignment="Center"
+                                                Background="LightGray"/>
+                                        
+                                        <Button Content="&lt;&lt;"
+                                                Style="{StaticResource addButton}"
+                                                Command="{Binding RemoveSizeFromProductCommand}"
+                                                Margin="10 0 10 10"
+                                                HorizontalAlignment="Center"
+                                                Background="LightGray"/>
+                                        
+                                    </StackPanel>
+                                    <ListBox ItemsSource="{Binding SizeOptions, UpdateSourceTrigger=PropertyChanged}"
+                                             SelectedItem="{Binding SelectedSize, UpdateSourceTrigger=PropertyChanged}"
+                                             DisplayMemberPath="Name"
+                                             FontSize="13"
+                                             MinWidth="80"/>
+                                </StackPanel>
+                            </StackPanel>
+                            <StackPanel Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="Taste options" FontSize="13"/>
+                                <StackPanel Orientation="Horizontal" Height="150">
+                                    <ListBox ItemsSource="{Binding AvailableTastes, UpdateSourceTrigger=PropertyChanged}"
+                                             SelectedItem="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}"
+                                             DisplayMemberPath="Name"
+                                             FontSize="13"
+                                             MinWidth="80">
+                                    </ListBox>
+                                    <StackPanel VerticalAlignment="Center">
+                                        <Button Content=">>"
+                                                Style="{StaticResource addButton}"
+                                                Command="{Binding AddTasteToProductCommand}"
+                                                Margin="10 0 10 10"
+                                                HorizontalAlignment="Center"
+                                                Background="LightGray"/>
+                                        <Button Content="&lt;&lt;"
+                                                Style="{StaticResource addButton}"
+                                                Command="{Binding RemoveTasteFromProductCommand}"
+                                                Margin="10 0 10 10"
+                                                HorizontalAlignment="Center"
+                                                Background="LightGray"/>
+                                    </StackPanel>
+                                    <ListBox ItemsSource="{Binding TasteOptions, UpdateSourceTrigger=PropertyChanged}" 
+                                             SelectedItem="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}"
+                                             DisplayMemberPath="Name"
+                                             FontSize="13"
+                                             MinWidth="80"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </Grid>
+                    </TabItem.Content>
+                    </TabItem>
+
+                <TabItem Header="Edit Product">
+                    <TabItem.Content>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <StackPanel Margin="10" VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal" Margin="0 0 0 10">
+                                    <TextBlock Text="Product #" 
+                                                FontSize="14"/>
+                                    <TextBlock Text="{Binding SelectedProduct.Id, UpdateSourceTrigger=PropertyChanged}" 
+                                               FontSize="14"/>
+                                </StackPanel>
+
+                                <TextBlock Text="Name" FontSize="13"/>
+                                <TextBox Text="{Binding SelectedProduct.Name, UpdateSourceTrigger=PropertyChanged}"
+                                         Margin="0 0 0 5"
+                                         FontSize="13"/>
+
+                                <TextBlock Text="Description" FontSize="13"/>
+                                <TextBox Text="{Binding SelectedProduct.Description, UpdateSourceTrigger=PropertyChanged}"
+                                         Margin="0 0 0 5"
+                                         FontSize="13"/>
+
+                                <TextBlock Text="Price" FontSize="13"/>
+                                <TextBox Text="{Binding SelectedProduct.Price, StringFormat={}{0:C2}, UpdateSourceTrigger=PropertyChanged}"
+                                         Margin="0 0 0 10"
+                                         FontSize="13"/>
+
+                                <Button Content="Save"
+                                        Style="{StaticResource addButton}"
+                                        Command="{Binding UpdateProductCommand}"
+                                        HorizontalAlignment="Center"
+                                        Padding="10 0 10 0"/>
+                            </StackPanel>
+
+                            <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="Size options" FontSize="13"/>
+                                <StackPanel Orientation="Horizontal" Height="150">
+                                    
+                                    <ListBox ItemsSource="{Binding AvailableSizes, UpdateSourceTrigger=PropertyChanged}"
+                                             SelectedItem="{Binding SelectedSize, UpdateSourceTrigger=PropertyChanged}"
+                                             DisplayMemberPath="Name"
+                                             FontSize="13"
+                                             MinWidth="80">
+                                    </ListBox>
+                                    <StackPanel VerticalAlignment="Center">
+                                        <Button Content=">>"
+                                               Style="{StaticResource addButton}"
+                                               Command="{Binding AddSizeToProductCommand}"
+                                                Margin="10 0 10 10"
+                                               HorizontalAlignment="Center"
+                                               Background="LightGray" />
+                                        <Button Content="&lt;&lt;"
+                                               Style="{StaticResource addButton}"
+                                               Command="{Binding RemoveSizeFromProductCommand}"
+                                                Margin="10 0 10 10"
+                                               HorizontalAlignment="Center"
+                                                Background="LightGray"/>
+                                    </StackPanel>
+                                    <ListBox ItemsSource="{Binding SizeOptions, UpdateSourceTrigger=PropertyChanged}"
+                                             SelectedItem="{Binding SelectedSize, UpdateSourceTrigger=PropertyChanged}"
+                                             DisplayMemberPath="Name"
+                                             FontSize="13"
+                                             MinWidth="80"/>
+                                </StackPanel>
+                            </StackPanel>
+
+                            <StackPanel Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                <TextBlock Text="Taste options" FontSize="13"/>
+                                <StackPanel Orientation="Horizontal" Height="150">
+                                    <ListBox ItemsSource="{Binding AvailableTastes, UpdateSourceTrigger=PropertyChanged}"
+                                             SelectedItem="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}"
+                                             DisplayMemberPath="Name"
+                                             FontSize="13"
+                                             MinWidth="80">
+                                    </ListBox>
+                                    <StackPanel VerticalAlignment="Center">
+                                        <Button Content=">>"
+                                               Style="{StaticResource addButton}"
+                                               Command="{Binding AddTasteToProductCommand}"
+                                               Margin="10 0 10 10"
+                                               HorizontalAlignment="Center"
+                                               Background="LightGray"/>
+                                        <Button Content="&lt;&lt;"
+                                               Style="{StaticResource addButton}"
+                                               Command="{Binding RemoveTasteFromProductCommand}"
+                                                Margin="10 0 10 10"
+                                               HorizontalAlignment="Center"
+                                               Background="LightGray"/>
+                                    </StackPanel>
+                                    <ListBox ItemsSource="{Binding TasteOptions, UpdateSourceTrigger=PropertyChanged}" 
+                                           SelectedItem="{Binding SelectedTaste, UpdateSourceTrigger=PropertyChanged}"
+                                           DisplayMemberPath="Name"
+                                             FontSize="13"
+                                           MinWidth="80"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </Grid>
+                    </TabItem.Content>
+                </TabItem>
+            </TabControl>
+        </Border>
     </Grid>
 </UserControl>
