--- a/OMSUI/Views/SalesDataView.xaml
+++ b/OMSUI/Views/SalesDataView.xaml
@@ -5,12 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:OrderManagerDesktopUI.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Background="DarkGray">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Label Content="SALESDATAVIEW"
+        <Border Style="{StaticResource whiteBorder}" 
+                Margin="15 0 0 7">
+            <Label Content="SALES DATA - COMING SOON"
                FontSize="30"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"/>
+        </Border>
     </Grid>
 </UserControl>
